[package]
name = "yewrs_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew_component_library = "0.1.0"
yew-router = "0.16.0"
gloo = "0.7.0"
yewdux-functional = "0.1.0"
yewdux = "0.7.0"
js-sys = "0.3.57"
rand_os = { version = "0.2.2", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.57", features = ["Location", 'Window', "HtmlDocument" ] }
eyre = "0.6.8"
url = { version = "2.2.2", features = ["serde"] }
serde = "1.0.137"
serde_json = "1.0.81"
wasm-bindgen = "0.2.80"